# categorizador-backend

./: .gitignore  README.md  check.py  check_imports.py  connnect.py  manage.py  pyproject.toml  seeds.py  test.py  testWAV.py  test_singleton.py  vectorizer.py  videosemb.py
api/: admin.py  embeddings_to_neo.py  llm_views.py  models.py  neo4j_client.py  pdf_embeddings.py  rag_views.py  resources.py  seeds.py  serializers.py  tasks.py  tests.py  tests_tasks.py  urls.py  utils.py  views.py  weaviate_client.py
api/management/commands/: reset_app_data.py  seed_initial_data.py
api/migrations/: 0001_initial.py  0002_alter_uploadedfile_status.py  0003_filemetadatamodel.py  0004_uploadedfile_file_location_alter_uploadedfile_status.py  0005_alter_uploadedfile_file.py
api/services/: model_loader.py  processing.py
api/utils/: __init__.py
api/views/: __init__.py  files.py  graph.py  nodes.py  tasks.py
categorizador/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
categorizador/helpers/: data_manager.py
tests/: test_services.py  test_views.py
