# pyproject.toml
[tool.poetry]
name        = "categorizador-backend"
version     = "0.1.0"
description = ""
authors     = ["Fabian <heromfabian@gmail.com>"]
readme      = "README.md"
packages    = [{ include = "categorizador_backend", from = "src" }]
[tool.poetry.dependencies]
python = "^3.11"      
django = "^5.1.6"
djangorestframework = "^3.15.2"
pydantic = "^2.10.6"
pytesseract = "^0.3.13"
pillow = "^11.1"
django-cors-headers = "^4.7"
ollama = "^0.4.7"
langchain-ollama = "^0.2.3"
langchain-text-splitters = "^0.3.6"
neo4j = "^5.28.1"
weaviate = "^0.1.2"
weaviate-client = "^4.11.3"
clip = { git = "https://github.com/openai/CLIP.git" }
ftfy = "^6.3.1"
regex = "^2024.11.6"
tqdm = "^4.67.1"
langchain-community = "^0.3.22"
pypdf = "^5.4.0"
transformers = "^4.41.0"  
accelerate    = "^0.30.1" 
decord       = "^0.6.0"    
av = "^11.0.0"     
numpy = ">=2.1,<3.0" 
soundfile      = "^0.12"       
safetensors    = "^0.4"        
# --- Whisper --------------------------------------------------
faster-whisper = "^1.1"   
ctranslate2 = { version = "^4.3.0", extras = ["cpu-avx2"] }
# --- GPU wheels ---
torch = { version = "2.6.0+cu118", source = "pytorch-cu118" }
torchvision = { version = "0.21.0+cu118", source = "pytorch-cu118" }
torchaudio = { version = "2.6.0+cu118", source = "pytorch-cu118" }
moviepy = "^2.2.1"

[[tool.poetry.source]]
name     = "pytorch-cu118"
url      = "https://download.pytorch.org/whl/cu118"
priority = "explicit"   